# sscma-example-esp32

./: .clang-format  .gitignore  .gitmodules  README.md  README_zh-CN.md
components/edgelab/: .clang-format  CMakeLists.txt  Kconfig
components/edgelab/src/: edgelab.h  el_common.h  el_compiler.h  el_config.h  el_config_internal.h  el_debug.h  el_types.h
components/edgelab/src/algorithm/: Kconfig  el_algorithm.cpp  el_algorithm.h  el_algorithm.hpp  el_algorithm_base.cpp  el_algorithm_base.hpp  el_algorithm_cls.hpp  el_algorithm_fomo.cpp  el_algorithm_fomo.hpp  el_algorithm_imcls.cpp  el_algorithm_imcls.hpp  el_algorithm_pfld.cpp  el_algorithm_pfld.hpp  el_algorithm_yolo.cpp  el_algorithm_yolo.h  el_algorithm_yolo.hpp
components/edgelab/src/data/: el_data.cpp  el_data.h  el_data.hpp  el_data_models.cpp  el_data_models.hpp  el_data_storage.cpp  el_data_storage.hpp
components/edgelab/src/inference/: Kconfig  el_inference.h  el_inference.hpp  el_inference_base.h  el_inference_base.hpp  el_inference_tflite.cpp  el_inference_tflite.h  el_inference_tflite.hpp
components/edgelab/src/ports/: Kconfig  el_camera.h  el_device.h  el_display.h  el_flash.h  el_misc.h  el_serial.h  el_transport.h
components/edgelab/src/ports/espressif/: Kconfig  el_board_config.h  el_camera_esp.cpp  el_camera_esp.h  el_device_esp.cpp  el_device_esp.h  el_display_esp.cpp  el_display_esp.h  el_flash_esp.cpp  el_flash_esp.h  el_misc.cpp  el_serial_esp.cpp  el_serial_esp.h
components/edgelab/src/ports/espressif/boards/: boards.h
components/edgelab/src/ports/espressif/boards/espressif_esp32s3_eye/: board.h
components/edgelab/src/ports/espressif/boards/seeed_xiao_esp32s3/: board.h
components/edgelab/src/repl/: el_repl.cpp  el_repl.h  el_repl.hpp  el_repl_executor.cpp  el_repl_executor.hpp  el_repl_history.cpp  el_repl_history.hpp  el_repl_server.cpp  el_repl_server.hpp
components/edgelab/src/utils/: el_base64.cpp  el_base64.h  el_cv.cpp  el_cv.h  el_hash.cpp  el_hash.h  el_nms.cpp  el_nms.h
components/esp-jpeg-simd/: README.md  idf_component.yml
components/esp-jpeg-simd/include/: esp_jpeg_dec.h
components/esp-tflite-micro/: CMakeLists.txt
components/esp_jpeg_simd/: idf_component.yml
components/esp_jpeg_simd/include/: esp_jpeg_enc.h
components/esp_jpeg_simd/src/: audio_malloc.c
components/fb_gfx/: fb_gfx.c
components/fb_gfx/include/: fb_gfx.h
components/imu/: CMakeLists.txt
components/imu/src/: qma7981.c  qma7981.h
components/madeploy/: CMakeLists.txt  Kconfig  LICENSE
components/madeploy/porting/espressif/esp32s3/: ma_camera_esp32.cpp  ma_device.cpp  ma_storage_lfs.cpp  ma_transport_i2c.h
components/mdns/: CMakeLists.txt  mqtt_ca.crt
components/modules/: CMakeLists.txt  Kconfig
components/modules/algorithm/: algo_fomo.cpp  algo_fomo.hpp  algo_meter.cpp  algo_motion.cpp  algo_motion.hpp  algo_yolo.cpp  algo_yolo.hpp
components/modules/camera/: app_camera.h
components/modules/imu/: app_imu.c  app_imu.h  qma7981.c  qma7981.h
components/modules/lcd/: app_lcd.c  app_lcd.h
components/modules/model/: fomo_model_data.cpp  fomo_model_data.h  motion_model_data.cpp  motion_model_data.h  pfld_meter_model_data.cpp  pfld_meter_model_data.h  yolo_model_data.cpp  yolo_model_data.h
components/modules/utils/: base64.c  base64.h  isp.c  isp.h
components/screen/: CMakeLists.txt  Kconfig  component.mk  screen_driver.c  screen_driver.h
components/sscma-client/: CMakeLists.txt  README.md  idf_component.yml
components/sscma-client/include/: sscma_client_commands.h  sscma_client_flasher.h  sscma_client_io.h  sscma_client_ops.h  sscma_client_types.h
components/sscma-client/interface/: sscma_client_flasher_interface.h
components/sscma-client/src/: sscma_client_flasher_we2_spi.c  sscma_client_flasher_we2_uart.c  sscma_client_io.c  sscma_client_io_spi.c  sscma_client_io_uart.c  sscma_client_ops.c
components/sscma-micro/: CMakeLists.txt  README.md  idf_component.yml
components/sscma-micro-porting/: CMakeLists.txt
components/sscma-micro-porting/porting/espressif/esp32s3/: ma_camera_esp32.cpp  ma_config_board.h  ma_device.cpp  ma_misc.c  ma_pm.cpp  ma_pm.h  ma_storage_lfs.h  ma_transport_i2c.cpp  ma_transport_mqtt.cpp  ma_transport_serial.cpp  ma_transport_spi.cpp
components/sscma_client/: README.md  idf_component.yml
components/sscma_client/include/: sscma_client.h
components/tflite-lib/: CMakeLists.txt
docs/edgelab/: doxygen_cfg
docs/en/: fomo.md  get_start.md  index.rst  meter.md
docs/zh_CN/: fomo.md  get_start.md  meter.md
examples/anomaly/: CMakeLists.txt
examples/anomaly/main/: app_main.cpp  (+1 more)
examples/at_server_demo/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/data_models_demo/: CMakeLists.txt
examples/data_storage_demo/: CMakeLists.txt  sdkconfig.defaults
examples/fomo/: CMakeLists.txt
examples/fomo_detection_demo/: CMakeLists.txt  partitions.csv
examples/gyro_anomaly_detection/: CMakeLists.txt
examples/gyro_anomaly_detection_nn/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/helloworld/: CMakeLists.txt  partitions.csv
examples/mobilenetv2_classification_demo/: CMakeLists.txt  sdkconfig.defaults
examples/motion/: CMakeLists.txt
examples/network_demo/: CMakeLists.txt  sdkconfig.defaults.esp32s2
examples/network_demo/cmake/: CMakeLists.txt
examples/pfld_meter_demo/: CMakeLists.txt  sdkconfig.defaults
examples/pfld_meter_demo/cmake/: CMakeLists.txt
examples/serial_echo_demo/: CMakeLists.txt  sdkconfig.defaults
examples/sscma_client_ota/: CMakeLists.txt  sdkconfig.defaults
examples/sscma_client_proxy/: CMakeLists.txt
examples/sscma_server_at/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
examples/svd/: .gitignore
examples/task_executor_demo/: CMakeLists.txt  sdkconfig.defaults
examples/yolo/: CMakeLists.txt  sdkconfig.defaults
examples/yolo_detection_demo/: CMakeLists.txt
model_zoo/: cls_mobilenetv2_cifar10.tflite  fomo_mask_int8.tflite  latest_int8.tflite  model.tflite  pfld_meter.tflite  yolov5_tiny_face.tflite
tools/: plain_2_packed.py  release.py  show.py  tflite2c.py
(+94 files in other folders)
